cluster/actualbudget/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: actual
  labels:
    app: actual
  name: actual
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actual
  strategy: {}
  template:
    metadata:
      labels:
        app: actual
    spec:
      containers:
      - image: docker.io/actualbudget/actual-server:latest
        name: actual-server
        ports: 
        - containerPort: 5006
        volumeMounts: 
        - name: actual-storage
          mountPath: /data
        livenessProbe:
          exec: 
            command: 
            - CMD-SHELL
            - "node src/scripts/health-check.js"
          periodSeconds: 60

      volumes: 
      - name: actual-storage
        persistentVolumeClaim:
        claimName: actual-pvc
